<resources>
    <string name="app_name">Schedule</string>
    <string name="main_page_title">我的日程</string>
    <string name="list_page_title">日程列表</string>
    <string name="list_status_title">日程状态</string>
    <string name="detail_page_title">日程详情</string>
    <string name="add_page_title">新建日程</string>
    <string name="add_page_title2">修改日程</string>
    <!--新增页面-->
    <string name="placeholder_add_title">请输入日程名称</string>
    <string name="placeholder_add_content">请输入日程内容</string>
    <string name="placeholder_add_remark">请输入日程备注</string>
    <string name="button_add_text">创建</string>
    <string name="button_add_start_text">创建并开始</string>
    <string name="button_add_change">保存</string>
    <string name="empty_add_title">日程名称不能为空</string>
    <string name="success_add_tip">创建成功</string>
    <string name="success_update_tip">保存成功</string>
    <!--详情页面-->
    <string name="detail_button_start">开始</string>
    <string name="detail_button_continue">继续</string>
    <string name="detail_button_suspend">暂停</string>
    <string name="detail_button_complete">完成</string>
    <!--字段标题-->
    <string name="field_title_remark">备注：</string>
    <string name="field_title_content">内容：</string>
    <string name="field_title_cost">用时：</string>
    <string name="field_title_time_start">开始时间：</string>
    <string name="field_title_time_end">结束时间：</string>
    <string name="field_title_time_create">创建时间：</string>
</resources>
