<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddActivity">

    <com.jingjingke.schedule.HeadLayout
        title="@string/add_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.jingjingke.schedule.HeadLayout>

    <EditText
        android:id="@+id/addTitle"
        android:hint="@string/placeholder_add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/addContent"
        android:hint="@string/placeholder_add_content"
        android:gravity="top"
        android:minLines="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/addRemark"
        android:hint="@string/placeholder_add_remark"
        android:gravity="top"
        android:minLines="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addSchedule"
            android:text="@string/button_add_text"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />
        <Button
            android:id="@+id/addStartSchedule"
            android:text="@string/button_add_start_text"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="50dp" />
    </LinearLayout>


</LinearLayout>