<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <com.jingjingke.schedule.HeadLayout
        title="@string/detail_page_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></com.jingjingke.schedule.HeadLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusable="true"
            android:focusableInTouchMode="true"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/BlockContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_medium"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/scheduleTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorTit"
                        android:textSize="@dimen/font_size_medium" />

                    <TextView
                        android:id="@+id/scheduleBuildTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/scheduleContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/scheduleRemark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_small"
                        android:textSize="@dimen/font_size_small" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/scheduleEdit"
                    android:layout_width="@dimen/font_size_large"
                    android:layout_height="@dimen/font_size_large"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginRight="@dimen/spacing_big"
                    android:src="@drawable/ic_edit" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_medium"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/scheduleStart"
                    style="@style/DefaultButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_button_start" />

                <Button
                    android:id="@+id/scheduleContinue"
                    style="@style/DefaultButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/detail_button_continue" />

                <Button
                    android:id="@+id/scheduleSuspend"
                    style="@style/DefaultButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radius_yellow_background"
                    android:text="@string/detail_button_suspend" />

                <Button
                    android:id="@+id/scheduleComplete"
                    style="@style/DefaultButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/radius_red_background"
                    android:text="@string/detail_button_complete" />
            </LinearLayout>

            <com.jingjingke.schedule.ScheduleListView
                android:id="@+id/detailList"
                style="@style/BlockDetailWarp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></com.jingjingke.schedule.ScheduleListView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>